--- a/app/src/main/res/layout-xxhdpi/content_main.xml
+++ b/app/src/main/res/layout-xxhdpi/content_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text="xxhdpi"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/result" />
+        app:layout_constraintTop_toTopOf="@id/result" />
 
 
     <EditText
@@ -21,6 +21,7 @@
         android:layout_width="183dp"
         android:layout_height="91dp"
         android:layout_marginTop="50dp"
+        android:focusable="false"
         android:ems="10"
         android:fontFamily="serif-monospace"
         android:gravity="end"
@@ -39,7 +40,7 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@id/result"
-        app:layout_constraintTop_toTopOf="@+id/result" />
+        app:layout_constraintTop_toTopOf="@id/result" />
 
     <Spinner
         android:id="@+id/archer"
@@ -50,8 +51,8 @@
         app:layout_constraintBottom_toTopOf="@id/endNumber"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toEndOf="@+id/ArrowValue"
-        app:layout_constraintTop_toTopOf="@+id/ArrowValue"
+        app:layout_constraintStart_toEndOf="@id/ArrowValue"
+        app:layout_constraintTop_toTopOf="@id/ArrowValue"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -63,7 +64,7 @@
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/archer"
+        app:layout_constraintStart_toStartOf="@id/archer"
         app:layout_constraintTop_toBottomOf="@id/archer"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteY="68dp" />
@@ -73,8 +74,8 @@
         android:layout_width="46dp"
         android:layout_height="24dp"
         android:text="@string/End"
-        app:layout_constraintStart_toStartOf="@+id/ArrowValue"
-        app:layout_constraintTop_toBottomOf="@+id/archer" />
+        app:layout_constraintStart_toStartOf="@id/ArrowValue"
+        app:layout_constraintTop_toBottomOf="@id/archer" />
 
 
     <LinearLayout
@@ -87,7 +88,7 @@
         app:layout_constraintDimensionRatio="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/result">
+        app:layout_constraintTop_toBottomOf="@id/result">
 
         <ImageView
             android:id="@+id/imageCible"
@@ -99,7 +100,7 @@
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+            app:layout_constraintTop_toBottomOf="@id/linearLayout" />
     </LinearLayout>
 
     <LinearLayout
@@ -110,7 +111,7 @@
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout"
         app:layout_constraintVertical_bias="0.060000002">
 
 
@@ -120,7 +121,7 @@
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_3">
+            app:layout_constraintTop_toBottomOf="@id/layout_3">
 
 
             <TableRow
@@ -259,16 +260,18 @@
 
                 <Button
                     android:id="@+id/bPreviousArcher"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:layout_constraintDimensionRatio="1"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="@drawable/archer_previous" />
 
                 <Button
                     android:id="@+id/bNextArcher"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:layout_constraintDimensionRatio="1"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="@drawable/archer_next" />
