--- a/app/src/main/res/layout-xhdpi/content_main.xml
+++ b/app/src/main/res/layout-xhdpi/content_main.xml
@@ -20,6 +20,7 @@
         android:layout_width="180dp"
         android:layout_height="100dp"
         android:layout_marginTop="50dp"
+        android:focusable="false"
         android:ems="10"
         android:fontFamily="serif-monospace"
         android:gravity="end"
@@ -47,7 +48,7 @@
         android:text="archer"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ArrowValue" />
+        app:layout_constraintTop_toTopOf="@id/ArrowValue" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -59,11 +60,11 @@
         app:layout_constraintDimensionRatio="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/result">
+        app:layout_constraintTop_toBottomOf="@id/result">
 
         <ImageView
             android:id="@+id/imageCible"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/ic_cible"
@@ -71,7 +72,7 @@
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+            app:layout_constraintTop_toBottomOf="@id/linearLayout" />
 
     </LinearLayout>
 
@@ -84,7 +85,7 @@
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        app:layout_constraintTop_toBottomOf="@id/linearLayout">
 
 
         <TableLayout
@@ -93,7 +94,7 @@
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_3">
+            app:layout_constraintTop_toBottomOf="@id/linearLayout3">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -123,8 +124,8 @@
 
                 <Button
                     android:id="@+id/button8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#D80E2C"
@@ -132,8 +133,8 @@
 
                 <Button
                     android:id="@+id/button7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#D80E2C"
@@ -142,8 +143,8 @@
 
                 <Button
                     android:id="@+id/button6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#357BE3"
@@ -158,8 +159,8 @@
 
                 <Button
                     android:id="@+id/button5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#357BE3"
@@ -167,8 +168,8 @@
 
                 <Button
                     android:id="@+id/button4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#00050B"
@@ -177,8 +178,8 @@
 
                 <Button
                     android:id="@+id/button3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#00050B"
@@ -187,8 +188,8 @@
 
                 <Button
                     android:id="@+id/button2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#FAF6F6"
@@ -197,8 +198,8 @@
 
                 <Button
                     android:id="@+id/button1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#FAF6F6"
@@ -214,32 +215,32 @@
 
                 <Button
                     android:id="@+id/Manque"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:text="Manque" />
 
                 <Button
                     android:id="@+id/Annul"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:text="Annul" />
 
                 <Button
                     android:id="@+id/bPreviousArcher"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="@drawable/archer_previous" />
 
                 <Button
                     android:id="@+id/bNextArcher"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="@drawable/archer_next" />
