--- a/app/src/main/res/layout-land-xxhdpi/activity_image_resultat.xml
+++ b/app/src/main/res/layout-land-xxhdpi/activity_image_resultat.xml
@@ -46,8 +46,9 @@
 
     <ImageView
         android:id="@+id/air_image"
-        android:layout_width="400dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        app:layout_constraintDimensionRatio="1"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
