--- a/app/src/main/res/layout/activity_resultat_round.xml
+++ b/app/src/main/res/layout/activity_resultat_round.xml
@@ -8,18 +8,20 @@
 
     <Spinner
         android:id="@+id/res_spinner_round"
-        android:layout_width="wrap_content"
-        android:layout_height="38dp"
-        android:layout_marginStart="0dp"
+        android:layout_width="418dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="32dp"
         android:layout_weight="1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/res_spinner_archer"
-        app:layout_constraintTop_toTopOf="@+id/res_spinner_archer" />
+        app:layout_constraintEnd_toEndOf="@+id/res_spinner_archer"
+        app:layout_constraintStart_toStartOf="@+id/res_spinner_archer"
+        app:layout_constraintTop_toBottomOf="@+id/res_spinner_archer" />
 
     <Spinner
         android:id="@+id/res_spinner_archer"
-        android:layout_width="wrap_content"
-        android:layout_height="38dp"
+        android:layout_width="424dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:layout_weight="3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -40,5 +42,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/res_lis_resultat"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.43" />
 </androidx.constraintlayout.widget.ConstraintLayout>
