--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -9,17 +9,15 @@
 
     <EditText
         android:id="@+id/result"
-        android:layout_width="213dp"
-        android:layout_height="161dp"
-        android:layout_marginStart="35dp"
-        android:ellipsize="end"
-        android:focusable="false"
+        android:layout_width="166dp"
+        android:layout_height="156dp"
+        android:layout_marginStart="32dp"
         android:ems="10"
-        android:scrollbars="vertical"
+        android:focusable="false"
         android:fontFamily="serif-monospace"
         android:inputType="textMultiLine"
         android:textAlignment="viewEnd"
-        android:textSize="10sp"
+        android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -70,25 +68,28 @@
         android:layout_marginEnd="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.894"
-        app:layout_constraintStart_toEndOf="@+id/imageCible"
+        app:layout_constraintStart_toEndOf="@id/imageCible"
         app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
             <Button
                 android:id="@+id/button10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="#F8FF3B"
                 android:text="  10 " />
 
             <Button
                 android:id="@+id/button9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="#F8FF3B"
                 android:text="  9  " />
@@ -96,20 +97,23 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
             <Button
                 android:id="@+id/button8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="#D80E2C"
                 android:text="  8  " />
 
             <Button
                 android:id="@+id/button7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="#D80E2C"
                 android:text="  7  " />
@@ -117,20 +121,23 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
             <Button
                 android:id="@+id/button6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="#357BE3"
                 android:text="  6  " />
 
             <Button
                 android:id="@+id/button5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="#357BE3"
                 android:text="  5  " />
@@ -138,12 +145,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
             <Button
                 android:id="@+id/button4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="#00050B"
                 android:text="  4  "
@@ -151,8 +160,9 @@
 
             <Button
                 android:id="@+id/button3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="#00050B"
                 android:text="  3  "
@@ -161,12 +171,14 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
             <Button
                 android:id="@+id/button2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="#FAF6F6"
                 android:text="  2  "
@@ -174,8 +186,9 @@
 
             <Button
                 android:id="@+id/button1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="#FAF6F6"
                 android:text="  1  "
@@ -184,20 +197,23 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
             <Button
                 android:id="@+id/Manque"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="#D5CECE"
                 android:text="Manque" />
 
             <Button
                 android:id="@+id/Annul"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:background="#D5CECE"
                 android:text="Annul" />
@@ -205,33 +221,50 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
             <Button
                 android:id="@+id/bPreviousArcher"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
+                app:layout_constraintDimensionRatio="0,75"
                 android:layout_weight="1"
                 android:background="@drawable/archer_previous" />
 
             <Button
                 android:id="@+id/bNextArcher"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
+                android:layout_rowWeight="1"
+                app:layout_constraintDimensionRatio="0,75"
                 android:layout_weight="1"
                 android:background="@drawable/archer_next" />
         </TableRow>
-
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/endNumberT"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
+                android:layout_weight="1"
+                android:hint=" "
+                android:text="@string/End"
+                android:textSize="12sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/endNumber"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:textSize="14sp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
+                android:hint="End"
+                android:textSize="12sp"
                 android:textStyle="bold" />
         </TableRow>
     </TableLayout>
