--- a/app/src/main/res/layout-xxhdpi/content_main.xml
+++ b/app/src/main/res/layout-xxhdpi/content_main.xml
@@ -121,7 +121,7 @@
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/layout_3">
+            app:layout_constraintTop_toBottomOf="@id/linearLayout3">
 
 
             <TableRow
