--- a/app/src/main/res/layout-land-xhdpi/activity_image_resultat.xml
+++ b/app/src/main/res/layout-land-xhdpi/activity_image_resultat.xml
@@ -14,6 +14,7 @@
         android:layout_gravity="center"
         android:text="archer"
         android:textAlignment="viewStart"
+        android:background="@drawable/it_style"
 
         android:textSize="18sp"
         android:textStyle="bold"
@@ -30,6 +31,7 @@
         android:textAlignment="viewStart"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:background="@drawable/it_style"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/air_image"
@@ -41,6 +43,7 @@
         android:layout_height="26dp"
         android:layout_marginTop="56dp"
         android:textSize="18sp"
+        android:background="@drawable/it_style"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/air_archer" />
 
