--- a/app/src/main/res/layout-land-xhdpi/content_main.xml
+++ b/app/src/main/res/layout-land-xhdpi/content_main.xml
@@ -12,9 +12,11 @@
         android:layout_width="128dp"
         android:layout_height="160dp"
         android:layout_marginStart="30dp"
+        android:background="@drawable/it_style"
         android:ems="10"
+        android:focusable="false"
         android:fontFamily="serif-monospace"
-        android:gravity="start|top"
+        android:gravity="right|top"
         android:inputType="textMultiLine"
         android:textSize="10sp"
         android:textStyle="bold"
@@ -39,21 +41,27 @@
         android:layout_height="43dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/it_style"
         android:text="archer"
         android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/result"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
         android:id="@+id/ArrowValue"
-        android:layout_width="61dp"
+        android:layout_width="37dp"
         android:layout_height="37dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="80dp"
         android:text="Arrow"
+        android:background="@drawable/am_arrow_style"
+        android:gravity="center"
+        android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -69,163 +77,188 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
             <Button
                 android:id="@+id/button10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#F8FF3B"
+                android:background="@drawable/am_buttonshape_yellow"
                 android:text="  10 " />
 
             <Button
                 android:id="@+id/button9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#F8FF3B"
+                android:background="@drawable/am_buttonshape_yellow"
                 android:text="  9  " />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
             <Button
                 android:id="@+id/button8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#D80E2C"
+                android:background="@drawable/am_buttonshape_red"
                 android:text="  8  " />
 
             <Button
                 android:id="@+id/button7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#D80E2C"
+                android:background="@drawable/am_buttonshape_red"
                 android:text="  7  " />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
             <Button
                 android:id="@+id/button6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#357BE3"
+                android:background="@drawable/am_buttonshape_blue"
                 android:text="  6  " />
 
             <Button
                 android:id="@+id/button5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#357BE3"
+                android:background="@drawable/am_buttonshape_blue"
                 android:text="  5  " />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
             <Button
                 android:id="@+id/button4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#00050B"
+                android:background="@drawable/am_buttonshape_black"
                 android:text="  4  "
                 android:textColor="#FAF6F6" />
 
             <Button
                 android:id="@+id/button3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#00050B"
+                android:background="@drawable/am_buttonshape_black"
                 android:text="  3  "
                 android:textColor="#FAF6F6" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
             <Button
                 android:id="@+id/button2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#FAF6F6"
+                android:background="@drawable/am_buttonshape_white"
                 android:text="  2  "
                 android:textColor="#00050B" />
 
             <Button
                 android:id="@+id/button1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#FAF6F6"
+                android:background="@drawable/am_buttonshape_white"
                 android:text="  1  "
                 android:textColor="#00050B" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
             <Button
                 android:id="@+id/Manque"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#D5CECE"
-                android:text="Manque"
+                android:background="@drawable/am_buttonshape_grey"
+                android:text="@string/am_bManque"
                 android:textSize="12sp" />
 
             <Button
                 android:id="@+id/Annul"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#D5CECE"
-                android:text="Annul"
+                android:background="@drawable/am_buttonshape_grey"
+                android:text="@string/am_bAnnul"
                 android:textSize="12sp" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
             <Button
                 android:id="@+id/bPreviousArcher"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:background="@drawable/am_buttonshape_previous_archer"
                 android:layout_weight="1"
-                android:background="@drawable/archer_previous" />
+                app:layout_constraintDimensionRatio="0,75" />
 
             <Button
                 android:id="@+id/bNextArcher"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_rowWeight="1"
+                android:background="@drawable/am_buttonshape_next_archer"
                 android:layout_weight="1"
-                android:background="@drawable/archer_next" />
+                app:layout_constraintDimensionRatio="0,75" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_rowWeight="1"
+            android:layout_weight="1">
 
             <TextView
-                android:id="@id/end"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/endNumberT"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1"
                 android:text="@string/End"
                 android:textSize="12sp"
@@ -233,10 +266,10 @@
 
             <TextView
                 android:id="@+id/endNumber"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
+                android:hint="End"
                 android:textSize="12sp"
                 android:textStyle="bold" />
         </TableRow>
