--- a/app/src/main/res/layout-land-xxhdpi/content_main.xml
+++ b/app/src/main/res/layout-land-xxhdpi/content_main.xml
@@ -12,9 +12,11 @@
         android:layout_width="166dp"
         android:layout_height="156dp"
         android:layout_marginStart="32dp"
+        android:background="@drawable/it_style"
         android:ems="10"
         android:focusable="false"
         android:fontFamily="serif-monospace"
+        android:gravity="start|top"
         android:inputType="textMultiLine"
         android:textAlignment="viewEnd"
         android:textSize="12sp"
@@ -26,9 +28,9 @@
         android:id="@+id/imageCible"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:layout_weight="1"
         android:background="@drawable/ic_cible"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,27 +39,31 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
 
+
     <Spinner
         android:id="@+id/archer"
-        android:layout_width="122dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="167dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/it_style"
         android:text="archer"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/result"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <TextView
         android:id="@+id/ArrowValue"
-        android:layout_width="61dp"
+        android:layout_width="37dp"
         android:layout_height="37dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="80dp"
         android:text="Arrow"
+        android:background="@drawable/am_arrow_style"
+        android:gravity="center"
+        android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -76,13 +82,14 @@
             android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
+
             <Button
                 android:id="@+id/button10"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#F8FF3B"
+                android:background="@drawable/am_buttonshape_yellow"
                 android:text="  10 " />
 
             <Button
@@ -91,7 +98,7 @@
                 android:layout_height="match_parent"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#F8FF3B"
+                android:background="@drawable/am_buttonshape_yellow"
                 android:text="  9  " />
         </TableRow>
 
@@ -100,13 +107,14 @@
             android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
+
             <Button
                 android:id="@+id/button8"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#D80E2C"
+                android:background="@drawable/am_buttonshape_red"
                 android:text="  8  " />
 
             <Button
@@ -115,7 +123,7 @@
                 android:layout_height="match_parent"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#D80E2C"
+                android:background="@drawable/am_buttonshape_red"
                 android:text="  7  " />
         </TableRow>
 
@@ -124,13 +132,14 @@
             android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
+
             <Button
                 android:id="@+id/button6"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#357BE3"
+                android:background="@drawable/am_buttonshape_blue"
                 android:text="  6  " />
 
             <Button
@@ -139,7 +148,7 @@
                 android:layout_height="match_parent"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#357BE3"
+                android:background="@drawable/am_buttonshape_blue"
                 android:text="  5  " />
         </TableRow>
 
@@ -148,13 +157,14 @@
             android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
+
             <Button
                 android:id="@+id/button4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#00050B"
+                android:background="@drawable/am_buttonshape_black"
                 android:text="  4  "
                 android:textColor="#FAF6F6" />
 
@@ -164,7 +174,7 @@
                 android:layout_height="match_parent"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#00050B"
+                android:background="@drawable/am_buttonshape_black"
                 android:text="  3  "
                 android:textColor="#FAF6F6" />
         </TableRow>
@@ -174,13 +184,14 @@
             android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
+
             <Button
                 android:id="@+id/button2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#FAF6F6"
+                android:background="@drawable/am_buttonshape_white"
                 android:text="  2  "
                 android:textColor="#00050B" />
 
@@ -190,7 +201,7 @@
                 android:layout_height="match_parent"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#FAF6F6"
+                android:background="@drawable/am_buttonshape_white"
                 android:text="  1  "
                 android:textColor="#00050B" />
         </TableRow>
@@ -200,14 +211,16 @@
             android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
+
             <Button
                 android:id="@+id/Manque"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#D5CECE"
-                android:text="Manque" />
+                android:background="@drawable/am_buttonshape_grey"
+                android:text="@string/am_bManque"
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/Annul"
@@ -215,8 +228,9 @@
                 android:layout_height="match_parent"
                 android:layout_rowWeight="1"
                 android:layout_weight="1"
-                android:background="#D5CECE"
-                android:text="Annul" />
+                android:background="@drawable/am_buttonshape_grey"
+                android:text="@string/am_bAnnul"
+                android:textSize="12sp" />
         </TableRow>
 
         <TableRow
@@ -224,23 +238,25 @@
             android:layout_height="match_parent"
             android:layout_rowWeight="1"
             android:layout_weight="1">
+
             <Button
                 android:id="@+id/bPreviousArcher"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
-                app:layout_constraintDimensionRatio="0,75"
                 android:layout_weight="1"
-                android:background="@drawable/archer_previous" />
+                android:background="@drawable/am_buttonshape_previous_archer"
+                app:layout_constraintDimensionRatio="0,75" />
 
             <Button
                 android:id="@+id/bNextArcher"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_rowWeight="1"
-                app:layout_constraintDimensionRatio="0,75"
                 android:layout_weight="1"
-                android:background="@drawable/archer_next" />
+                android:background="@drawable/am_buttonshape_next_archer"
+                app:layout_constraintDimensionRatio="0,75" />
         </TableRow>
+
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
