--- a/app/src/main/res/layout-land/activity_image_resultat.xml
+++ b/app/src/main/res/layout-land/activity_image_resultat.xml
@@ -14,6 +14,7 @@
         android:layout_gravity="center"
         android:text="archer"
         android:textAlignment="viewStart"
+        android:background="@drawable/it_style"
 
         android:textSize="18sp"
         android:textStyle="bold"
@@ -30,6 +31,7 @@
         android:textAlignment="viewStart"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:background="@drawable/it_style"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/air_image"
@@ -41,13 +43,15 @@
         android:layout_height="26dp"
         android:layout_marginTop="56dp"
         android:textSize="18sp"
+        android:background="@drawable/it_style"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/air_archer" />
 
     <ImageView
         android:id="@+id/air_image"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        app:layout_constraintDimensionRatio="1"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,8 +60,8 @@
 
     <LinearLayout
         android:id="@+id/air_layoutImage"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="400dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="28dp"
         android:gravity="center"
         android:orientation="vertical"
