--- a/app/src/main/res/layout-xxhdpi/content_main.xml
+++ b/app/src/main/res/layout-xxhdpi/content_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="xxhdpi"
+        android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/result" />
 
@@ -20,9 +20,11 @@
         android:id="@+id/result"
         android:layout_width="183dp"
         android:layout_height="91dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="54dp"
+        android:background="@drawable/it_style"
         android:focusable="false"
         android:ems="10"
+
         android:fontFamily="serif-monospace"
         android:gravity="end"
         android:inputType="textMultiLine"
@@ -33,21 +35,27 @@
 
     <TextView
         android:id="@+id/ArrowValue"
-        android:layout_width="30dp"
-        android:layout_height="wrap_content"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="20dp"
-        android:textSize="24sp"
+        android:background="@drawable/am_arrow_style"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textSize="22sp"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintLeft_toRightOf="@id/result"
         app:layout_constraintTop_toTopOf="@id/result" />
 
     <Spinner
         android:id="@+id/archer"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="35dp"
         android:text="archer"
+        android:layout_marginLeft="4dp"
         android:textSize="14sp"
+        android:background="@drawable/it_style"
         app:layout_constraintBottom_toTopOf="@id/endNumber"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
@@ -73,8 +81,9 @@
         android:id="@+id/textView3"
         android:layout_width="46dp"
         android:layout_height="24dp"
+        android:layout_marginStart="12dp"
         android:text="@string/End"
-        app:layout_constraintStart_toStartOf="@id/ArrowValue"
+        app:layout_constraintStart_toEndOf="@+id/ArrowValue"
         app:layout_constraintTop_toBottomOf="@id/archer" />
 
 
@@ -92,7 +101,7 @@
 
         <ImageView
             android:id="@+id/imageCible"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/ic_cible"
@@ -130,14 +139,14 @@
                 android:layout_rowWeight="1"
                 android:layout_weight="1">
 
+
                 <Button
                     android:id="@+id/button10"
-                    style="@android:style/Widget.Button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:background="#F8FF3B"
+                    android:background="@drawable/am_buttonshape_yellow"
                     android:lineSpacingExtra="8sp"
                     android:text=" 10 " />
 
@@ -147,7 +156,7 @@
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:background="#F8FF3B"
+                    android:background="@drawable/am_buttonshape_yellow"
                     android:lineSpacingExtra="8sp"
                     android:text="  9  " />
 
@@ -157,7 +166,7 @@
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:background="#D80E2C"
+                    android:background="@drawable/am_buttonshape_red"
                     android:text="  8  " />
 
                 <Button
@@ -166,7 +175,7 @@
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:background="#D80E2C"
+                    android:background="@drawable/am_buttonshape_red"
                     android:text="  7  "
                     android:textSize="14sp" />
 
@@ -176,7 +185,7 @@
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:background="#357BE3"
+                    android:background="@drawable/am_buttonshape_blue"
                     android:text="  6  "
                     android:textSize="14sp" />
             </TableRow>
@@ -193,7 +202,7 @@
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:background="#357BE3"
+                    android:background="@drawable/am_buttonshape_blue"
                     android:text="  5  " />
 
                 <Button
@@ -202,9 +211,9 @@
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:background="#00050B"
+                    android:background="@drawable/am_buttonshape_black"
                     android:text="  4  "
-                    android:textColor="#FAF6F6" />
+                    android:textColor="@color/BlancCible" />
 
                 <Button
                     android:id="@+id/button3"
@@ -212,9 +221,9 @@
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:background="#00050B"
+                    android:background="@drawable/am_buttonshape_black"
                     android:text="  3  "
-                    android:textColor="#FAF6F6" />
+                    android:textColor="@color/BlancCible" />
 
                 <Button
                     android:id="@+id/button2"
@@ -222,7 +231,7 @@
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:background="#FAF6F6"
+                    android:background="@drawable/am_buttonshape_white"
                     android:text="  2  "
                     android:textColor="#00050B" />
 
@@ -232,7 +241,7 @@
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:background="#FAF6F6"
+                    android:background="@drawable/am_buttonshape_white"
                     android:text="  1  "
                     android:textColor="#00050B" />
             </TableRow>
@@ -248,7 +257,8 @@
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:text="Manque" />
+                    android:background="@drawable/am_buttonshape_grey"
+                    android:text="@string/am_bManque" />
 
                 <Button
                     android:id="@+id/Annul"
@@ -256,7 +266,8 @@
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:text="Annul" />
+                    android:background="@drawable/am_buttonshape_grey"
+                    android:text="@string/am_bAnnul" />
 
                 <Button
                     android:id="@+id/bPreviousArcher"
@@ -265,20 +276,22 @@
                     app:layout_constraintDimensionRatio="1"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:background="@drawable/archer_previous" />
+                    android:background="@drawable/am_buttonshape_previous_archer" />
 
                 <Button
                     android:id="@+id/bNextArcher"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:background="@drawable/am_buttonshape_next_archer"
+                    android:bottom="0dp"
+                    android:left="0dp"
+                    android:right="0dp"
                     app:layout_constraintDimensionRatio="1"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
-                    android:background="@drawable/archer_next" />
+                    android:top="0dp" />
 
             </TableRow>
-
-
         </TableLayout>
 
     </LinearLayout>
