mise en place export données + remise en forme des écran

--- a/app/src/main/res/layout-land-xhdpi/activity_image_resultat.xml
+++ b/app/src/main/res/layout-land-xhdpi/activity_image_resultat.xml
@@ -60,7 +60,7 @@
     <LinearLayout
         android:id="@+id/air_layoutImage"
         android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:gravity="center"
         android:orientation="vertical"
