--- a/app/src/main/res/layout/activity_image_resultat.xml
+++ b/app/src/main/res/layout/activity_image_resultat.xml
@@ -13,11 +13,12 @@
         android:layout_height="52dp"
         android:layout_gravity="center"
         android:layout_marginTop="12dp"
+        android:background="@drawable/it_style"
+        android:gravity="center"
         android:text="archer"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:background="@drawable/it_style"
         app:layout_constraintEnd_toEndOf="@+id/air_round"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/air_round"
@@ -30,11 +31,11 @@
         android:layout_height="29dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
+        android:background="@drawable/it_style"
         android:text="@string/roundName"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:background="@drawable/it_style"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
